Fix chip spacing

--- a/scss/_patterns_chip.scss
+++ b/scss/_patterns_chip.scss
@@ -10,7 +10,6 @@
     align-items: baseline;
     border-radius: 1rem;
     display: inline-flex;
-    gap: $sph--small;
     margin: 0 $sph--small $input-margin-bottom 0;
     max-width: 100%;
     padding: calc(#{$spv--x-small} - 1px) $sph--small; // account for border thickness using calc
